--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,23 +7,32 @@ WORKDIR /app
 # Copia los archivos necesarios para instalar dependencias
 COPY package*.json ./
 
-# Instala todas las dependencias (producción y desarrollo)
+# Instala todas las dependencias
 RUN npm install
 
-# Copia el resto de los archivos del proyecto
+# Copia el resto del código fuente
 COPY . .
 
 # Construye la aplicación para producción
 RUN npm run build
 
-# Etapa 2: Servidor Nginx para servir la aplicación estática
-FROM nginx:stable-alpine
+# Etapa 2: Servir con Node.js
+FROM node:18-alpine
 
-# Copia los archivos construidos al directorio de Nginx
-COPY --from=build /app/build /usr/share/nginx/html
+WORKDIR /app
 
-# Expone el puerto 80 para acceder a la aplicación
-EXPOSE 80
+# Instala solo las dependencias necesarias para producción
+COPY package*.json ./
+RUN npm install --only=production
 
-# Comando para iniciar Nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Copia la carpeta 'build' desde la etapa de construcción
+COPY --from=build /app/build ./build
+
+# Agrega el servidor Express (debes tener un archivo `server.js`)
+COPY server.js .
+
+# Expone el puerto para el servidor
+EXPOSE 3000
+
+# Inicia el servidor
+CMD ["node", "server.js"]
