--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.9"
+version: '3.9'
 services:
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - '3000:3000'
     environment:
       PORT: 3000
       MONGODB_URI: mongodb://mongodb:27017/taskspaces-db
@@ -21,25 +21,13 @@ services:
     depends_on:
       - mongodb
 
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "5173:80"
-    environment:
-      VITE_BASE_URL: /
-      VITE_API_URL: http://localhost:3000/api
-      VITE_SOCKET_URL: http://localhost:3000
-
   mongodb:
     image: mongo:6
     container_name: mongodb
     ports:
-      - "27017:27017"
+      - '27017:27017'
     volumes:
       - mongo-data:/data/db
 
 volumes:
   mongo-data:
-
